--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,24 @@
 # os specific
 .DS_Store
 
-# keeper cloud storage
-Cared-Data-Certificate-HowTo.pdf
-archive-metadata.md
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
