--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "covid-vaccine-dynamics"]
 	path = covid-vaccine-dynamics
-	url = git@github.com:Priesemann-Group/covid-vaccine-dynamics.git
+	url = https://github.com/Priesemann-Group/covid-vaccine-dynamics.git
