--- a/configs/observed.yml
+++ b/configs/observed.yml
@@ -1,4 +1,4 @@
 vaccination-policy: observed
 input-dir: "data/factorisation-with-fit"
-load-correction-factor: true
+generate-correction-factors: true
 save-output: true
