--- a/configs/policy-exp.yml
+++ b/configs/policy-exp.yml
@@ -1,6 +1,6 @@
 input-dir: data/factorisation-with-fit
 vaccination-policy: [observed,elderly_first,young_first,uniform]
-load-correction-factor: true
+generate-correction-factors: true
 save-output: true
 samples: 1000
 workers: 64
