--- a/configs/young-first.yml
+++ b/configs/young-first.yml
@@ -1,4 +1,4 @@
 vaccination-policy: young_first
 input-dir: "data/factorisation-with-fit"
-load-correction-factor: true
+generate-correction-factors: true
 save-output: true
